--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react",
     "styles",
     "cartoview",
-    "thematic", "WMS", "Geoserver"
+    "thematic",
+    "WMS",
+    "Geoserver"
   ],
   "author": "cartologic <cartoview@cartologic.com> (http://cartologic.com/)",
   "license": "BSD-2",
@@ -34,7 +36,8 @@
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.3.2",
     "react-fontawesome": "^1.5.0",
-    "reactstrap": "^4.5.0"
+    "reactstrap": "^4.5.0",
+    "tcomb-form": "^0.9.16"
   },
   "peerDependencies": {
     "react": "^0.14.3 || ^15.0.0",
