--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cartocolor": "^4.0.0",
     "classnames": "^2.2.5",
     "rc-color-picker": "^1.1.4",
+    "rc-util": "^2.0.2",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
